fix: data-center on mobile view

--- a/web/marianzburlea/my-cv-v3-starter/css/grid.css
+++ b/web/marianzburlea/my-cv-v3-starter/css/grid.css
@@ -35,6 +35,10 @@
 }
 
 
+[data-center] {
+  grid-column: 1/-1;
+}
+
 @media screen and (min-width: 768px) {
   [data-center] {
     grid-column: 3/-3;
